--- a/_posts/2024-06-30-Project1.md
+++ b/_posts/2024-06-30-Project1.md
@@ -3,8 +3,8 @@ title: Predicting & Enhancing Employee Performance Through HR Analytics
 description: >-    
     In today's competitive business landscape, HR departments utilize data analytics to optimize employee performance, enhancing productivity and talent retention. By systematically analyzing employee data, organizations can uncover key performance drivers, improve recruitment strategies, and evaluate training program effectiveness. 
 date: 2024-06-26 18:55:00-0700
-categories: [Projects, Data Science, Predictive Analytics, Human Resources, Business Intelligence ]
-tags: [Projects, Data Science, Predictive Analytics, HR Analytics, Employee Performance]
+categories: [Data Science, HR Analytics]
+tags: [Predictive Analytics, Employee Performance, Workforce Optimization, Data-Driven HR]
 pin: true
 image: /assets/img/happy_employees.jpg
 published: true
