--- a/_posts/2024-06-30-Project1.md
+++ b/_posts/2024-06-30-Project1.md
@@ -5,7 +5,7 @@ description: >-
 date: 2024-06-26 18:55:00-0700
 categories: [Data Science, HR Analytics]
 tags: [Predictive Analytics, Employee Performance, Workforce Optimization, Data-Driven HR]
-pin: true
+pin: false
 image: /assets/img/happy_employees.jpg
 published: true
 ---
