--- a/_posts/2024-06-30-Project1.md
+++ b/_posts/2024-06-30-Project1.md
@@ -4,10 +4,10 @@ description: >-
     In today's competitive business landscape, HR departments utilize data analytics to optimize employee performance, enhancing productivity and talent retention. By systematically analyzing employee data, organizations can uncover key performance drivers, improve recruitment strategies, and evaluate training program effectiveness. 
 date: 2024-06-26 18:55:00-0700
 categories: [Data Science, HR Analytics]
-tags: [Predictive Analytics, Employee Performance, Workforce Optimization, Data-Driven HR]
+tags: [Predictive Analytics, Employee Performance, Workforce Optimization, Data Driven HR]
 pin: false
 image: /assets/img/happy_employees.jpg
-published: true
+published: false
 ---
 
 ## Predicting & Enhancing Employee Performance Through HR Analytics
