--- a/_posts/2024-06-30-Project1.md
+++ b/_posts/2024-06-30-Project1.md
@@ -10,9 +10,7 @@ image: /assets/img/happy_employees_resized.jpg
 published: true
 ---
 
-# Predicting & Enhancing Employee Performance Through HR Analytics
-
-![Photo](/assets/img/happy_employees.jpg){: width="250" height="150" .right}
+![Photo](/assets/img/happy_employees.jpg){: width="250" height="175" .right}
 
 ### In today's competitive business landscape, organizations strive to enhance productivity and retain top talent. Employee performance is a critical factor influencing organizational success, and optimizing this performance is a primary objective for Human Resources (HR) departments. Leveraging data analytics within HR, commonly referred to as HR analytics, provides a powerful means to achieve this objective. By systematically analyzing employee data, organizations can uncover insights into key performance drivers, optimize recruitment strategies, and evaluate the effectiveness of training programs. 
 
@@ -51,19 +49,19 @@ published: true
 - **Data Preparation:** Handled missing values, performed summary statistics, and data cleaning.
 - **Exploratory Data Analysis (EDA):** Visualized data distributions, outliers, and relationships.
 
-![EDA_RecruitmentChannel](assets/img/Project1/EDA_Recruitment.png){.center}
+![EDA_RecruitmentChannel](assets/img/Project1/EDA_Recruitment.png)
 
-![EDA_Trainings](assets/img/Project1/EDA_Trainings.png){.center}
+![EDA_Trainings](assets/img/Project1/EDA_Trainings.png)
 
 - **Statistical Tests:** Conducted ANOVA tests to assess recruitment and training impact.
 
-![ANOVA](assets/img/Project1/ANOVA.png){.center}
+![ANOVA](assets/img/Project1/ANOVA.png)
 
 - **ROC Curve:** 
     - The ROC curve is above the diagonal, indicating that the model performs better than random guessing.
     - The AUC value of 0.74 suggests that the Gradient Boosting model has decenter performance in predicting the target variable.
 
-![ROC](assets/img/Project1/ROC_Curve.png){.center}    
+![ROC](assets/img/Project1/ROC_Curve.png)    
     
 - **Feature Engineering:** Transformed categorical variables for modeling.
 - **Modeling:** Used Logistic Regression, Random Forest, Gradient Boosting, and SVM. Tuned Gradient Boosting for optimal performance.
@@ -84,7 +82,7 @@ published: true
 
 
 - **Feature Importance:** Identified previous year ratings, training scores, and length of service as top predictors.
-![Feature_Importance](assets/img/Project1/Feature_Importance.png){.center}
+![Feature_Importance](assets/img/Project1/Feature_Importance.png)
 
 - **Impact Analysis:** Analyzed performance distribution across recruitment channels and training programs.
 
