--- a/_posts/2024-06-30-Project1.md
+++ b/_posts/2024-06-30-Project1.md
@@ -12,7 +12,7 @@ published: true
 
 ![Photo](/assets/img/happy_employees.jpg){: width="250" height="175" .right}
 
-### In today's competitive business landscape, organizations strive to enhance productivity and retain top talent. Employee performance is a critical factor influencing organizational success, and optimizing this performance is a primary objective for Human Resources (HR) departments. Leveraging data analytics within HR, commonly referred to as HR analytics, provides a powerful means to achieve this objective. By systematically analyzing employee data, organizations can uncover insights into key performance drivers, optimize recruitment strategies, and evaluate the effectiveness of training programs. 
+<span style="Font-size:1.17em;"> In today's competitive business landscape, organizations strive to enhance productivity and retain top talent. Employee performance is a critical factor influencing organizational success, and optimizing this performance is a primary objective for Human Resources (HR) departments. Leveraging data analytics within HR, commonly referred to as HR analytics, provides a powerful means to achieve this objective. By systematically analyzing employee data, organizations can uncover insights into key performance drivers, optimize recruitment strategies, and evaluate the effectiveness of training programs. </span>
 
 
 
