--- a/_posts/2024-07-15-Project2.md
+++ b/_posts/2024-07-15-Project2.md
@@ -7,7 +7,7 @@ categories: [Data Science, Fraud Detection]
 tags: [Predictive Analytics, Fraud Detection, Financial Security, Machine Learning]
 pin: false
 image: /assets/img/Project2/hacker.jpg
-published: false
+published: true
 ---
 
 ![Photo](/assets/img/Project2/protection.jpg){: width="300" height="200" .right}
@@ -42,9 +42,18 @@ published: false
 ---
 
 ### Business Problem/Hypothesis:
-- Identify key transaction characteristics indicative of fraudulent activity.
-- Assess the impact of entry modes, demographic factors, and transaction types on the likelihood of fraud.
-- Hypothesize that specific transaction characteristics and well-developed predictive models can accurately distinguish between fraudulent and non-fraudulent transactions.
+Our project is centered on a number of key research inquiries that focus on solving the issue of identifying fraudulent transactions using transaction analytics. In particular, we aim to determine:
+
+   1.	Which transaction characteristics are the most indicative of fraudulent activity?
+   2.	How do different entry modes (e.g., Tap, PIN, CVC) affect the likelihood of a transaction being fraudulent?
+   3.	What role do demographic factors (e.g., age, gender, country of residence) play in predicting fraud?
+   4.	Can a predictive model accurately predict fraud?
+
+***Hypothesis**
+Our initial research and dataset examination suggest:  
+   - Analyzing transaction traits could predict potential fraud. 
+   - A sophisticated predictive model can effectively differentiate fraudulent from legitimate transactions.
+
 
 ---
 
@@ -60,6 +69,37 @@ published: false
 - **Model Training and Evaluation:** Used Logistic Regression and Random Forest with class weight adjustment to handle imbalanced data. Tuned hyperparameters using GridSearchCV.
 
 ---
+###Fraud Distribution Analysis:###
+This projects explores questions concerning the key indicators of fraud in transactions and examines how the likelihood of fraud varies with different methods of entry, such as Tap, PIN, or CVC.
+
+**Fraud Distribution Across Days of the Week**
+-	Observation: Fraudulent transactions occur most frequently on Tuesdays and Wednesdays.
+-	Insight: These days may represent peak periods for fraudulent activities, possibly due to transaction volumes or specific fraudulent strategies targeting these days
+![Day_of_Week](assets/img/Project2/Distribution_DaysOfWeek.png)
+
+**Fraud Distribution by Type of Cards**
+-	Observation: Both Visa and MasterCard show instances of fraud, with Visa having a slightly higher number of fraudulent transactions.
+-	Insight: Visa cards might be more targeted or have higher transaction volumes, making them more susceptible to fraud.
+![Type_Card](assets/img/Project2/Distribution_TypeOfCard.png)
+
+**Fraud Distribution Across Entry Modes**
+-	Observation: The PIN entry mode has the highest number of transactions and a notable amount of fraud. Despite having fewer total transactions than PIN, the CVC entry mode shows a relatively higher proportion of fraudulent transactions. The Tap entry mode also exhibits fraudulent activities but to a lesser extent than PIN and CVC.
+-	Insight: While the most common and generally secure, PIN-based transactions still show significant fraud, potentially due to PIN theft or skimming. CVC transactions, though less frequent, have the highest proportion of fraud, indicating a vulnerability in card-not-present transactions. Tap transactions, with the lowest volume and fraud instances, should still be monitored and secured due to their increasing usage and potential risks.
+![EntryMode]](assets/img/Project2/Distribution_Entry.png)
+
+**Fraud Distribution by Type of Transaction**
+-	Observation: Fraudulent transactions are distributed across POS, online, and ATM transactions, with online transactions showing a higher count of fraud.
+-	Insight: Online transactions, being more prone to security breaches, show higher fraud rates, highlighting the need for enhanced security measures in e-commerce.
+![Transaction](assets/img/Project2/Distribution_Transaction.png)
+
+**Fraud Distribution by Bank**
+-	Observation: Fraudulent transactions are present across various banks, with Barclays showing the highest count.
+-	Insight: The higher volume of transactions at Barclays might correlate with higher fraud occurrences, suggesting the need for more stringent fraud prevention measures at this bank.
+![Bank_Distribution]](assets/img/Project2/Distribution_Bank.png)
+
+The study identifies that fraudulent transactions are more common on Tuesdays and Wednesdays and occur more frequently with the use of Visa cards. Online purchases have a greater incidence of fraud, suggesting they are more prone to security issues. The sectors most affected include children's items, electronics, and fashion retailers.
+
+Transactions using a PIN often encounter substantial fraud, possibly from stolen PINs or skimming devices. While less common, transactions needing a CVC tend to show greater levels of fraud, indicating weaknesses in card-not-present scenarios. Tap-to-pay transactions experience lesser fraud but still need vigilance as their use increases and they carry inherent risks.
 
 ### Results
 - **Model Performance:**  Random Forest outperformed Logistic Regression with high precision, recall, F1-score, and ROC-AUC.
@@ -71,45 +111,42 @@ published: false
 
 *Class 0 - Non-Fraudulent / Class 1 - Fradulent*
 
+The Random Forest model's confusion matrix showed a strong true negative rate, minimal false positives, and moderate rates for both true positives and false negatives.
+![Confusion_Maxtrix](assets/img/Project2/ConfusionMatrix.png)
+
+The findings indicate that the Random Forest model is successful at detecting fraudulent and non-fraudulent transactions alike, establishing it as a favorable option for fraud detection.
+
 
 - **Feature Importance:** The feature importance analysis from the Random Forest model revealed that the top predictors of fraudulent transactions included temporal (time of transaction), geographic (country of transaction), and transaction amount features.
 
 ![Feature_Importance](assets/img/Project2/Feature_Importance.png)
 
-- **Impact Analysis:** Analyzed performance distribution across recruitment channels and training programs.
-
 ---
 
 ### Recommendations
-- Enhance training quality and relevance.
-- Optimize recruitment strategies.
-- Leverage key performance predictors for HR decisions.
-- Implement regular performance monitoring and feedback mechanisms.
+- **Stregthen Security Measures for Online Transactions:**
+   - Implement multi-factor authentication (MFA).
+   - Use advanced machine learning algorithms for real-time detection.
+- **Focus on High-Risk Merchant Groups:**
+   - Increase monitoring in high-risk categories like electronics and fashion.
+- **Stregthen Regional Fraud Prevention:**
+   - Develop region-specific measures for high-risk countries.
+- **Monitor and Secure Entry Modes:**
+   - Enhance security for PIN and CVC transactions.
+- **Target High-Risk Age Groups:**
+   - Develop awarness campaigns for individuals aged 30 to 60.
 
 ---
 
 ### Conclusion
 
-This study utilized HR analytics to predict and enhance employee performance, identifying key performance drivers and evaluating HR strategies. The top predictors of performance were previous year ratings, average training scores, and length of service. Recruitment channels and the quality of training programs also significantly impacted performance.
+This study demonstrates the effectiveness of machine learning in detecting fraudulent transactions. The Random Forest model proved to be the most reliable, providing high precision and recall. The analysis highlights the importance of transaction characteristics, entry modes, and demographic factors in fraud detection. Implementing the recommended strategies can significantly enhance transaction security.
 
-**Practical Applications:**
-1. **Optimizing Recruitment:**
-   - Strengthen high-performing channels like 'Other' and 'Referred.'
-   - Improve sourcing strategies with rigorous screening and aligned job descriptions.
-2. **Enhancing Training Programs:**
-   - Focus on quality and relevance.
-   - Develop tailored and interactive training.
-   - Offer continuous learning opportunities.
-3. **Leveraging Key Predictors:**
-   - Improve performance reviews.
-   - Create targeted development programs for training scores and service length.
-4. **Performance Monitoring:**
-   - Implement regular check-ins, 360-degree feedback, and performance dashboards.
-5. **Predictive Model Implementation:**
-   - Use the Gradient Boosting model to predict performance.
-   - Integrate it into HR systems for real-time insights.
-   - Update it with new data regularly.
+**Future Work:**
+1. **Integration with Real-Time Systems:** Develop scalable models for real-time transaction processing.
+2. **Cross-Industry and Cross-Regional Studies:** Expand research to include diverse industries and regions.
+3. **User Behavior Analysis:** Incorporate behavioral data for deeper insights.
+4. **Advanced Techniques:** Explore deep learning and anomoly detection methods.
 
-Implementing these strategies can enhance performance, productivity, and work environment. This study highlights the value of HR analytics for strategic decisions and underscores the importance of data-driven HR strategies for organizational success. Future research should address limitations and explore additional features to improve predictive accuracy.
-
+By addressing these areas, financial institutions can futher enhance their fraud detection capabilities and protect consumers from fraudulent activites. 
 ---
