--- a/_posts/2024-07-15-Project2.md
+++ b/_posts/2024-07-15-Project2.md
@@ -7,7 +7,7 @@ categories: [Data Science, Fraud Detection]
 tags: [Predictive Analytics, Fraud Detection, Financial Security, Machine Learning]
 pin: false
 image: /assets/img/Project2/hacker.jpg
-published: true
+published: false
 ---
 
 ![Photo](/assets/img/Project2/protection.jpg){: width="300" height="200" .right}
